test/compilable/imports/test313c2.d
module imports.test313c2;

static import imports.test313d;
